kubernetes/catalog/siliconnotes/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/CorneliousJD/Docker-Templates/master/siliconnotes.xml
# Category: Productivity
# Stars: 0 | Downloads: 34197
apiVersion: apps/v1
kind: Deployment
metadata:
  name: siliconnotes
  namespace: siliconnotes
  labels:
    app.kubernetes.io/name: siliconnotes
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: siliconnotes
  template:
    metadata:
      labels:
        app.kubernetes.io/name: siliconnotes
    spec:
      securityContext:
        fsGroup: 5000
      containers:
        - name: siliconnotes
          image: bityard/silicon
          # No environment variables defined
          ports:
            - containerPort: 5000
              protocol: TCP
              name: web-interface
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 30
            failureThreshold: 10
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 30
            failureThreshold: 10
          volumeMounts:
            - name: siliconnotes-data-0
              mountPath: "/home/silicon/instance"
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: siliconnotes-data-0
        persistentVolumeClaim:
          claimName: siliconnotes-data-0
---
apiVersion: v1
kind: Service
metadata:
  name: siliconnotes
  namespace: siliconnotes
  labels:
    app.kubernetes.io/name: siliconnotes
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: siliconnotes
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: web-interface
  type: ClusterIP
