kubernetes/catalog/siliconnotes/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: siliconnotes
  namespace: siliconnotes
  labels:
    app.kubernetes.io/name: siliconnotes
    infraweaver.io/source: community-apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`siliconnotes.int.rlservers.com`)
      kind: Rule
      middlewares:
        - name: netbird-vpn-only
          namespace: traefik
      services:
        - name: siliconnotes
          port: 5000
  tls:
    secretName: int-rlservers-com-tls
